--- a/css/gameplay.css
+++ b/css/gameplay.css
@@ -1,3 +1,38 @@
 #selected{
     background-color: greenyellow;
 }
+aside{
+    margin: 1px;
+    float: left;
+    width: 30vw;
+    z-index: 4;
+}
+aside ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+aside ul li{
+    width: 300px;
+    text-align: center;
+    border: solid black 1px ;
+}
+aside ul li:hover{
+    background-color: greenyellow;
+}
+aside ul li a{
+    padding: 0px 50px;
+    color: black;
+    text-decoration: none;
+}
+aside ul li a:hover{
+    color: black;
+    text-decoration: none;
+}
+main{
+    float: right;
+    margin: 10px;
+    border: solid black 1px;
+    width: 60vw;
+}
+/*@media aside da se premesti nagore pri malki devices */
