--- a/css/gameplay.css
+++ b/css/gameplay.css
@@ -1,38 +1,49 @@
 #selected{
     background-color: greenyellow;
 }
-aside{
-    margin: 1px;
-    float: left;
-    width: 30vw;
+nav{
+    margin-bottom: 50px;
+}
+.horizontalRuler{
+    /* media za da izchezne*/
+}
+#kaka{
+    text-align: center;
+    z-index: 20000;
+    position: relative;
+}
+section{
     z-index: 4;
 }
-aside ul {
-    display: flex;
-    flex-direction: column;
+section ul {
     list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
 }
-aside ul li{
-    width: 300px;
+section ul li{
     text-align: center;
+    width: 200px;
     border: solid black 1px ;
 }
-aside ul li:hover{
+section ul li:hover{
     background-color: greenyellow;
 }
-aside ul li a{
-    padding: 0px 50px;
+section ul li a{
+    padding: 5 20px;
     color: black;
     text-decoration: none;
 }
-aside ul li a:hover{
+section ul li a:hover{
     color: black;
     text-decoration: none;
 }
 main{
-    float: right;
-    margin: 10px;
+    width: 90vw;
+    margin: auto;
+    border-radius: 25px;
     border: solid black 1px;
-    width: 60vw;
 }
-/*@media aside da se premesti nagore pri malki devices */
+/*@media section da stane menu */
