--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -4,11 +4,11 @@
 }
 
 nav{
-    position: fixed;
+    position: relative;
     height: 50px;
     text-align: center;
     background-color: gray;
-    width: 100vw;
+    width: 100%;
     z-index: 3;
 }
 nav ul{
@@ -33,4 +33,96 @@ nav ul li a img{
     height: 100px;
     width: auto;
     overflow: auto;
+}
+footer{
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    color: white;
+    height: 50px;
+    margin: 0px;
+}
+footer a{
+    display: flex;
+    align-items: center;
+}
+
+
+
+.fa-facebook {
+    z-index: 1000;
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    z-index: 100;
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-google {
+    z-index: 100;
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-reddit {
+    z-index: 100;
+    background: #ff5700;
+    color: white;
+}
+footer ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+footer ul li {
+    list-style: none;
+    margin: 0 15px;
+}
+
+footer ul li a {
+    align-content: center;
+    position: relative;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    background: #333;
+    border-radius: 50%;
+    font-size: 30px;
+    color: #666;
+    transition: .5s;
+}
+
+
+footer ul li a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
+}
+
+footer ul li a:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #ffee10;
+}
+
+footer ul li a:hover {
+    color: #ffee10;
+    box-shadow: 0 0 5px #ffee10;
+    text-shadow: 0 0 5px #ffee10;
 }
